Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22632

wsrep XID checkpointing can happen out of order for certification failure

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.14, 10.5.5
    • Galera
    • None

    Description

      wsrep XID can be checkpointed in innodb rollback segment too early, if a transaction fails in certification and does not go for commit phase, where natural ordering of wsrep XID checkpointing would be guaranteed.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            seppo Seppo Jaakola
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2.5d
                2.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.